Added testing logic

--- a/CurrencyConverterApp/src/app/app.component.html
+++ b/CurrencyConverterApp/src/app/app.component.html
@@ -11,7 +11,8 @@
   </mat-card-content>
 </mat-card>
 </div>
-<div class="vector-attribution">
-  <a href="https://www.vecteezy.com/free-vector/coin"><p>Coin Vectors by Vecteezy</p></a>
-  <a href="https://www.vecteezy.com/free-vector/dollar-icon"><p>Dollar Icon Vectors by Vecteezy</p></a>
+<div class="vector-attribution m-2">
+  <button mat-mini-fab class="bg-primary text-white" [matTooltip]="tooltip">
+    <mat-icon>collections</mat-icon>
+  </button>
 </div>
