--- a/CurrencyConverterApp/src/app/components/conversion-form/conversion-form.component.html
+++ b/CurrencyConverterApp/src/app/components/conversion-form/conversion-form.component.html
@@ -29,8 +29,10 @@
         </mat-select>
       </mat-form-field>
       </div>
-      <div class="col-10 ps-1 d-flex mb-3 align-items-center">
-        <h2 class="m-0">{{exchangedValue}}</h2>
+      <div class="col-10 ps-1">
+        <div class="exchanged-value-container">
+          <h2 class="m-0">{{exchangedValue}}</h2>
+        </div>
       </div>
     </div>
   </form>
